# luckin-coffee-bot

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
bot/: agent.py  flows.py  main.py  tools.py  ui.py
core/: admin.py  config.py  db.py  prefs.py  push.py
deploy/: SETUP.md  coffee-service.service  coffee-tunnel.service  coffee-web.service  coffee-wechat.service  deploy.sh  tunnel.sh
service/: app.py
tests/: test_agent_prefs.py  test_db.py  test_flows.py  test_main_prefs_reorder.py  test_multiuser.py  test_prefs.py  test_service.py  test_tools.py  test_web_location.py  test_wechat_prefs_reorder.py
web/: app.py  landing.html  location.html  login.html
wechat/: README.md  bridge.mjs  package.json
